onprem/imagegallery-api.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagegallery-api-app
spec:
  selector:
    matchLabels:
      app: imagegallery-api-app
  replicas: 3
  template:
    metadata:
      labels:
        app: imagegallery-api-app
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "imagegallery-api"
        dapr.io/app-port: "443"
        dapr.io/app-ssl: "true"
        dapr.io/config: "tracing"
        dapr.io/enable-metrics: "true"
        dapr.io/metrics-port: "9090"        
    spec:      
      hostAliases:
      - ip: "10.62.35.49"
        hostnames:
        - "idp.imagegallery.com"
        - "api.imagegallery.com"
        - "sql.imagegallery.com"
        - "client.imagegallery.com"
      volumes:
      - name: https-volume
        persistentVolumeClaim:
          claimName: pvc-https
      containers:
      - name: imagegallery-api
        volumeMounts:
          - mountPath: /https
            name: https-volume
        image: tmather99/imagegallery-api:v1
        ports:
        - containerPort: 443
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"  
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: imagegallery-api-service
spec:
  selector:
    app: imagegallery-api-app  
  type: LoadBalancer  
  externalIPs:
    - 10.62.35.49
  ports:
    - protocol: TCP 
      port: 7075
      targetPort: 443
