onprem/imagegallery-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagegallery-client-app
spec:
  selector:
    matchLabels:
      app: imagegallery-client-app
  replicas: 1
  template:
    metadata:
      labels:
        app: imagegallery-client-app
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "imagegallery-client"
        dapr.io/app-port: "443"
        dapr.io/app-ssl: "true"
        dapr.io/config: "tracing"
        dapr.io/enable-metrics: "true"
        dapr.io/metrics-port: "9090"        
    spec:      
      hostAliases:
      - ip: "192.168.1.12"
        hostnames:
        - "idp.imagegallery.com"
        - "api.imagegallery.com"
        - "sql.imagegallery.com"
        - "client.imagegallery.com"
      volumes:
      - name: https-volume
        persistentVolumeClaim:
          claimName: pvc-https
      containers:
      - name: imagegallery-client
        volumeMounts:
          - mountPath: /https
            name: https-volume
        image: tmather99/imagegallery-client:v1
        ports:
        - containerPort: 443
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"  
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: imagegallery-client-service
spec:
  selector:
    app: imagegallery-client-app  
  type: LoadBalancer  
  externalIPs:
    - 192.168.1.12
  ports:
    - protocol: TCP 
      port: 7184
      targetPort: 443
