onprem/imagegallery-sql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globosql
spec:
  selector:
    matchLabels:
      app: globosql
  replicas: 1  
  template:
    metadata:
      labels:
        app: globosql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: globosql
        image: tmather99/imagegallery-sql:v1
        ports:
        - containerPort: 1433 
        resources:
          limits:
            memory: "2048Mi"
            cpu: "2048m"  
---
apiVersion: v1
kind: Service
metadata:
  name: globosql
spec:
  selector:
    app: globosql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
  externalIPs:
    - 192.168.1.12
