onprem/imagegallery-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imagegallery-ingress  
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - seq.onprem.com
    secretName: seq-onprem-tls   
  - hosts:
      - zipkin.onprem.com
    secretName: zipkin-onprem-tls   
  - hosts:
      - redis.onprem.com
    secretName: redis-onprem-tls   
  - hosts:
      - rabbitmq.onprem.com
    secretName: rabbitmq-onprem-tls   
  - hosts:
      - sqlpad.onprem.com
    secretName: sqlpad-onprem-tls   
  rules:
  - host: seq.onprem.com
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seq-service
            port: 
              number: 80  
  - host: zipkin.onprem.com
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin-service
            port: 
              number: 9411  
  - host: redis.onprem.com
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander
            port: 
              number: 8081  
  - host: rabbitmq.onprem.com
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port: 
              number: 15672  
  - host: sqlpad.onprem.com
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sqlpad-service
            port: 
              number: 3000
